[package]
name = "promptoml"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "promptoml"
path = "src/main.rs"

[dependencies]
toml = "0.8"
promkit = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
nom = "7.1"
